dep/grpc-wrapper/envoy-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config-grpc-wrapper
  labels:
    name: envoy-config-grpc-wrapper
data:
  config: |-
    ---
    static_resources:
      listeners:
      - address:
          socket_address:
            address: 0.0.0.0
            port_value: 80
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              tracing:
                operation_name: ingress
              codec_type: auto
              stat_prefix: ingress_http
              route_config:
                name: grpc-wrapper-route
                virtual_hosts:
                - name: grpc-wrapper-vh
                  domains:
                  - "*"
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: grpc-wrapper-app
                    decorator:
                      operation: grpc-wrapper-call
              http_filters:
              - name: envoy.router
                config: {}
      - address:
          socket_address:
            address: 0.0.0.0
            port_value: 9000
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              tracing:
                operation_name: egress
              codec_type: http2
              stat_prefix: egress_http
              route_config:
                name: grpc-service-route
                virtual_hosts:
                - name: grpc-service-vh
                  domains:
                  - "*"
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: grpc-service-envoy
                    decorator:
                      operation: grpc-service-call
              http_filters:
              - name: envoy.router
                config: {}
      clusters:
      - name: grpc-wrapper-app
        connect_timeout: 0.250s
        type: strict_dns
        lb_policy: round_robin
        hosts:
        - socket_address:
            address: 127.0.0.1
            port_value: 8080
      - name: grpc-service-envoy
        connect_timeout: 0.250s
        type: strict_dns
        lb_policy: round_robin
        http2_protocol_options: {}
        hosts:
        - socket_address:
            address: grpc-service
            port_value: 80
      - name: zipkin
        connect_timeout: 1s
        type: strict_dns
        lb_policy: round_robin
        hosts:
        - socket_address:
            address: zipkin
            port_value: 9411
    tracing:
      http:
        name: envoy.zipkin
        config:
          collector_cluster: zipkin
          collector_endpoint: "/api/v1/spans"
    admin:
      access_log_path: "/dev/null"
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8001
